Update release number, add fallback for grid to stop card-grid component overlapping in ie 11. Add a max width to the line in header to stop overlapping in ie 11.

--- a/wp-content/themes/sydneytheme/src/sass/card-grid.scss
+++ b/wp-content/themes/sydneytheme/src/sass/card-grid.scss
@@ -30,25 +30,55 @@
     &__container {
 
         @include breakpoint(tablet) {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-gap: 20px;
+            display: table;
             padding: 0 60px;
         }
 
         @include breakpoint(desktop) {
-            grid-gap: 40px;
             padding: 0 80px;
+        }
+    }
+
+    &__image-wrapper {
+        @include breakpoint(tablet) {
+            display: table-cell;
+            padding-right: 20px;
+        }
+
+        @include breakpoint(desktop) {
+            padding-right: 40px;
         }
     }
 
     &__image-wrapper:last-child {
         margin-bottom: 80px;
+        padding-right: 0;
 
         @include breakpoint(tablet) {
             margin-bottom: 0;
         }
     }
+
+    @supports (display: grid) {
+        &__container {
+
+            @include breakpoint(tablet) {
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-gap: 20px;
+            }
+    
+            @include breakpoint(desktop) {
+                grid-gap: 40px;
+            }
+        }
+
+        &__image-wrapper {
+            @include breakpoint(tablet) {
+                padding-right: 0;
+            }
+        }
+      }
 
     &__image-container {
         position: relative;
